# note_kepper

./: Cargo.toml  README.md  package-lock.json  package.json
src/: main.rs
styles/: output.css
templates/: base.html  index.html  new_note.html
