[package]
name = "note_kepper"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12"
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
hyper = "1.2"
http = "1.1"
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0.219", features = ["derive"] }
